# geometry

./: .clang-format  .gitignore  CMakeLists.txt  README.MD  example  main.cpp
.github/workflows/: build.yml
src/: axis.h  point.h  point2D.h  point3D.h  point3D4.h  vector.h
test/: testPoint.cpp  testPoint2D.cpp  testPoint3D.cpp  testPoint3D4.cpp  testVector.cpp
